# gutagent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GutAgent_Architecture.md  README.md  pyproject.toml  requirements.txt
data/: profile_template.json
docs/: ARCHITECTURE.md  README.md  REFACTORING.md  TODO.md  TOKEN_USAGE.md  architecture_comparison.md
gutagent/: agent.py  config.py  core.py  logging_config.py  main.py  paths.py  profile.py  profile_template.json  run_cli.py  run_web.py
gutagent/api/: mobile.py  server.py
gutagent/db/: __init__.py  common.py  connection.py  logs.py  models.py  nutrition.py  recipes.py
gutagent/llm/: __init__.py  base.py  claude.py  claude_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
gutagent/prompts/: system.py
gutagent/scratch/: mydb.db  myutils.py  safe_foods.json  scratch.py  scratch_data.json
gutagent/tools/: registry.py
gutagent/utils/: check_data.py  export_data.py  fix_data.py  generate_report.py  import_history.py  import_labs.py
gutagent/web/: app.jsx  index.html  manifest.json  sw.js
tests/: test_gutagent.py  test_mobile.py  test_mobile_providers.py  test_pattern_analysis.py  test_phase5.py
