[project]
name = "gutagent"
version = "0.1.0"
description = "Personalized dietary AI agent for IBD management"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.0",
]
nutrition = [
    "requests>=2.31",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
mobile = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "pydantic[email]>=2.0.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3",
]

[project.scripts]
gutagent = "gutagent.main:main"
gutagent-mobile-api = "gutagent.api.mobile:main"

[tool.setuptools]
packages = ["gutagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
